--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/http/server.ts",
+    "db:generate": "drizzle-kit generate:pg"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@neondatabase/serverless": "^0.8.1",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "drizzle-orm": "^0.29.3",
+    "elysia": "latest",
+    "postgres": "^3.4.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "bun-types": "latest",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0"
   },
   "module": "src/index.js"
