--- a/package.json
+++ b/package.json
@@ -7,18 +7,23 @@
     "db:generate": "drizzle-kit generate:pg"
   },
   "dependencies": {
+    "@elysiajs/bearer": "^0.8.0",
+    "@elysiajs/cors": "^0.8.0",
+    "@elysiajs/jwt": "^0.8.0",
     "@neondatabase/serverless": "^0.8.1",
     "@paralleldrive/cuid2": "^2.2.2",
+    "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.29.3",
     "elysia": "latest",
-    "postgres": "^3.4.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/bcryptjs": "^2.4.6",
     "bun-types": "latest",
     "drizzle-kit": "^0.20.14",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "pg": "^8.11.3"
   },
   "module": "src/index.js"
 }
