--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/http/server.ts",
-    "db:generate": "drizzle-kit generate:pg"
+    "db:generate": "drizzle-kit generate:pg",
+    "seed": "bun src/db/seed.ts"
   },
   "dependencies": {
     "@elysiajs/bearer": "^0.8.0",
@@ -14,13 +15,16 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.29.3",
+    "drizzle-typebox": "^0.1.1",
     "elysia": "latest",
+    "stripe": "^14.18.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcryptjs": "^2.4.6",
     "bun-types": "latest",
+    "chalk": "^5.3.0",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0",
     "pg": "^8.11.3"
