--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@elysiajs/bearer": "^0.8.0",
     "@elysiajs/cors": "^0.8.0",
     "@elysiajs/jwt": "^0.8.0",
+    "@elysiajs/swagger": "^0.8.5",
     "@neondatabase/serverless": "^0.8.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "bcryptjs": "^2.4.3",
